Forcing input to be cleared; fixing scrollbar in playlist.

--- a/css/master.css
+++ b/css/master.css
@@ -77,7 +77,8 @@
 	height:46vh;
 	width:100%;
 	margin-top:5px;
-	overflow:auto;
+	overflow-y:auto;
+	overflow-x:hidden;
 }
 
 .playlistItem p {
